netknife.output
Grammar

    0 $accept: netknife_exp $end

    1 netknife_exp: ε
    2             | netknife_exp trans_exp

    3 trans_exp: trans_name_exp LBRACE RBRACE
    4          | trans_name_exp LBRACE trans_body_exp RBRACE

    5 trans_name_exp: TRANS STRING

    6 trans_body_exp: rule_table_exp
    7               | comment_table_exp
    8               | import_rule_chain_exp
    9               | trans_body_exp rule_table_exp
   10               | trans_body_exp comment_table_exp
   11               | trans_body_exp import_rule_chain_exp

   12 import_rule_chain_exp: IMPORT STRING SEM
   13                      | IMPORT STRING filter_exp SEM
   14                      | IMPORT LBRACE index_string_exp RBRACE SEM
   15                      | IMPORT LBRACE index_string_exp RBRACE filter_exp SEM
   16                      | IMPORT LBRACE index_string_exp RBRACE HYPHEN GT STRING SEM
   17                      | IMPORT LBRACE index_string_exp RBRACE HYPHEN GT STRING filter_exp SEM

   18 filter_exp: INCLUDE range_exp
   19           | EXCLUDE range_exp
   20           | filter_exp INCLUDE range_exp
   21           | filter_exp EXCLUDE range_exp

   22 range_exp: NUMBER
   23          | const_comment_exp
   24          | REGX_START index_string_exp REGX_END
   25          | NUMBER TO NUMBER
   26          | const_comment_exp TO const_comment_exp
   27          | NUMBER TO const_comment_exp
   28          | const_comment_exp TO NUMBER
   29          | range_exp COMMA REGX_START index_string_exp REGX_END
   30          | range_exp COMMA const_comment_exp
   31          | range_exp COMMA NUMBER
   32          | range_exp COMMA NUMBER TO NUMBER
   33          | range_exp COMMA NUMBER TO const_comment_exp
   34          | range_exp COMMA const_comment_exp TO NUMBER
   35          | range_exp COMMA const_comment_exp TO const_comment_exp

   36 const_comment_exp: TRANS_IMPORT_COMMENT_START index_string_exp TRANS_IMPORT_COMMENT_END

   37 comment_table_exp: COMMENT_START index_string_exp COMMENT_END

   38 rule_table_exp: index_string_exp EQ GT index_string_exp SEM
   39               | index_string_exp EQ NUMBER GT index_string_exp SEM

   40 index_string_exp: STRING
   41                 | LINE_BREAK
   42                 | index_string_exp STRING
   43                 | index_string_exp EMPTY
   44                 | index_string_exp LINE_BREAK


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NUMBER <d> (258) 22 25 27 28 31 32 33 34 39
    STRING <s> (259) 5 12 13 16 17 40 42
    EMPTY <s> (260) 43
    LINE_BREAK <s> (261) 41 44
    TRANS (262) 5
    IMPORT (263) 12 13 14 15 16 17
    COMMENT_START (264) 37
    COMMENT_END (265) 37
    INCLUDE (266) 18 20
    EXCLUDE (267) 19 21
    TO (268) 25 26 27 28 32 33 34 35
    LBRACE (269) 3 4 14 15 16 17
    RBRACE (270) 3 4 14 15 16 17
    REGX_START (271) 24 29
    REGX_END (272) 24 29
    COMMA (273) 29 30 31 32 33 34 35
    EQ (274) 38 39
    GT (275) 16 17 38 39
    SEM (276) 12 13 14 15 16 17 38 39
    TRANS_IMPORT_COMMENT_START (277) 36
    TRANS_IMPORT_COMMENT_END (278) 36
    HYPHEN (279) 16 17


Nonterminals, with rules where they appear

    $accept (25)
        on left: 0
    netknife_exp <netknife> (26)
        on left: 1 2
        on right: 0 2
    trans_exp <trans> (27)
        on left: 3 4
        on right: 2
    trans_name_exp <s> (28)
        on left: 5
        on right: 3 4
    trans_body_exp <trans> (29)
        on left: 6 7 8 9 10 11
        on right: 4 9 10 11
    import_rule_chain_exp <import_rule_chain> (30)
        on left: 12 13 14 15 16 17
        on right: 8 11
    filter_exp <filter> (31)
        on left: 18 19 20 21
        on right: 13 15 17 20 21
    range_exp <ran> (32)
        on left: 22 23 24 25 26 27 28 29 30 31 32 33 34 35
        on right: 18 19 20 21 29 30 31 32 33 34 35
    const_comment_exp <s> (33)
        on left: 36
        on right: 23 26 27 28 30 33 34 35
    comment_table_exp <comment_tab> (34)
        on left: 37
        on right: 7 10
    rule_table_exp <rule_tab> (35)
        on left: 38 39
        on right: 6 9
    index_string_exp <s> (36)
        on left: 40 41 42 43 44
        on right: 14 15 16 17 24 29 36 37 38 39 42 43 44


State 0

    0 $accept: • netknife_exp $end
    1 netknife_exp: ε •
    2             | • netknife_exp trans_exp

    $default  reduce using rule 1 (netknife_exp)

    netknife_exp  go to state 1


State 1

    0 $accept: netknife_exp • $end
    2 netknife_exp: netknife_exp • trans_exp
    3 trans_exp: • trans_name_exp LBRACE RBRACE
    4          | • trans_name_exp LBRACE trans_body_exp RBRACE
    5 trans_name_exp: • TRANS STRING

    $end   shift, and go to state 2
    TRANS  shift, and go to state 3

    trans_exp       go to state 4
    trans_name_exp  go to state 5


State 2

    0 $accept: netknife_exp $end •

    $default  accept


State 3

    5 trans_name_exp: TRANS • STRING

    STRING  shift, and go to state 6


State 4

    2 netknife_exp: netknife_exp trans_exp •

    $default  reduce using rule 2 (netknife_exp)


State 5

    3 trans_exp: trans_name_exp • LBRACE RBRACE
    4          | trans_name_exp • LBRACE trans_body_exp RBRACE

    LBRACE  shift, and go to state 7


State 6

    5 trans_name_exp: TRANS STRING •

    $default  reduce using rule 5 (trans_name_exp)


State 7

    3 trans_exp: trans_name_exp LBRACE • RBRACE
    4          | trans_name_exp LBRACE • trans_body_exp RBRACE
    6 trans_body_exp: • rule_table_exp
    7               | • comment_table_exp
    8               | • import_rule_chain_exp
    9               | • trans_body_exp rule_table_exp
   10               | • trans_body_exp comment_table_exp
   11               | • trans_body_exp import_rule_chain_exp
   12 import_rule_chain_exp: • IMPORT STRING SEM
   13                      | • IMPORT STRING filter_exp SEM
   14                      | • IMPORT LBRACE index_string_exp RBRACE SEM
   15                      | • IMPORT LBRACE index_string_exp RBRACE filter_exp SEM
   16                      | • IMPORT LBRACE index_string_exp RBRACE HYPHEN GT STRING SEM
   17                      | • IMPORT LBRACE index_string_exp RBRACE HYPHEN GT STRING filter_exp SEM
   37 comment_table_exp: • COMMENT_START index_string_exp COMMENT_END
   38 rule_table_exp: • index_string_exp EQ GT index_string_exp SEM
   39               | • index_string_exp EQ NUMBER GT index_string_exp SEM
   40 index_string_exp: • STRING
   41                 | • LINE_BREAK
   42                 | • index_string_exp STRING
   43                 | • index_string_exp EMPTY
   44                 | • index_string_exp LINE_BREAK

    STRING         shift, and go to state 8
    LINE_BREAK     shift, and go to state 9
    IMPORT         shift, and go to state 10
    COMMENT_START  shift, and go to state 11
    RBRACE         shift, and go to state 12

    trans_body_exp         go to state 13
    import_rule_chain_exp  go to state 14
    comment_table_exp      go to state 15
    rule_table_exp         go to state 16
    index_string_exp       go to state 17


State 8

   40 index_string_exp: STRING •

    $default  reduce using rule 40 (index_string_exp)


State 9

   41 index_string_exp: LINE_BREAK •

    $default  reduce using rule 41 (index_string_exp)


State 10

   12 import_rule_chain_exp: IMPORT • STRING SEM
   13                      | IMPORT • STRING filter_exp SEM
   14                      | IMPORT • LBRACE index_string_exp RBRACE SEM
   15                      | IMPORT • LBRACE index_string_exp RBRACE filter_exp SEM
   16                      | IMPORT • LBRACE index_string_exp RBRACE HYPHEN GT STRING SEM
   17                      | IMPORT • LBRACE index_string_exp RBRACE HYPHEN GT STRING filter_exp SEM

    STRING  shift, and go to state 18
    LBRACE  shift, and go to state 19


State 11

   37 comment_table_exp: COMMENT_START • index_string_exp COMMENT_END
   40 index_string_exp: • STRING
   41                 | • LINE_BREAK
   42                 | • index_string_exp STRING
   43                 | • index_string_exp EMPTY
   44                 | • index_string_exp LINE_BREAK

    STRING      shift, and go to state 8
    LINE_BREAK  shift, and go to state 9

    index_string_exp  go to state 20


State 12

    3 trans_exp: trans_name_exp LBRACE RBRACE •

    $default  reduce using rule 3 (trans_exp)


State 13

    4 trans_exp: trans_name_exp LBRACE trans_body_exp • RBRACE
    9 trans_body_exp: trans_body_exp • rule_table_exp
   10               | trans_body_exp • comment_table_exp
   11               | trans_body_exp • import_rule_chain_exp
   12 import_rule_chain_exp: • IMPORT STRING SEM
   13                      | • IMPORT STRING filter_exp SEM
   14                      | • IMPORT LBRACE index_string_exp RBRACE SEM
   15                      | • IMPORT LBRACE index_string_exp RBRACE filter_exp SEM
   16                      | • IMPORT LBRACE index_string_exp RBRACE HYPHEN GT STRING SEM
   17                      | • IMPORT LBRACE index_string_exp RBRACE HYPHEN GT STRING filter_exp SEM
   37 comment_table_exp: • COMMENT_START index_string_exp COMMENT_END
   38 rule_table_exp: • index_string_exp EQ GT index_string_exp SEM
   39               | • index_string_exp EQ NUMBER GT index_string_exp SEM
   40 index_string_exp: • STRING
   41                 | • LINE_BREAK
   42                 | • index_string_exp STRING
   43                 | • index_string_exp EMPTY
   44                 | • index_string_exp LINE_BREAK

    STRING         shift, and go to state 8
    LINE_BREAK     shift, and go to state 9
    IMPORT         shift, and go to state 10
    COMMENT_START  shift, and go to state 11
    RBRACE         shift, and go to state 21

    import_rule_chain_exp  go to state 22
    comment_table_exp      go to state 23
    rule_table_exp         go to state 24
    index_string_exp       go to state 17


State 14

    8 trans_body_exp: import_rule_chain_exp •

    $default  reduce using rule 8 (trans_body_exp)


State 15

    7 trans_body_exp: comment_table_exp •

    $default  reduce using rule 7 (trans_body_exp)


State 16

    6 trans_body_exp: rule_table_exp •

    $default  reduce using rule 6 (trans_body_exp)


State 17

   38 rule_table_exp: index_string_exp • EQ GT index_string_exp SEM
   39               | index_string_exp • EQ NUMBER GT index_string_exp SEM
   42 index_string_exp: index_string_exp • STRING
   43                 | index_string_exp • EMPTY
   44                 | index_string_exp • LINE_BREAK

    STRING      shift, and go to state 25
    EMPTY       shift, and go to state 26
    LINE_BREAK  shift, and go to state 27
    EQ          shift, and go to state 28


State 18

   12 import_rule_chain_exp: IMPORT STRING • SEM
   13                      | IMPORT STRING • filter_exp SEM
   18 filter_exp: • INCLUDE range_exp
   19           | • EXCLUDE range_exp
   20           | • filter_exp INCLUDE range_exp
   21           | • filter_exp EXCLUDE range_exp

    INCLUDE  shift, and go to state 29
    EXCLUDE  shift, and go to state 30
    SEM      shift, and go to state 31

    filter_exp  go to state 32


State 19

   14 import_rule_chain_exp: IMPORT LBRACE • index_string_exp RBRACE SEM
   15                      | IMPORT LBRACE • index_string_exp RBRACE filter_exp SEM
   16                      | IMPORT LBRACE • index_string_exp RBRACE HYPHEN GT STRING SEM
   17                      | IMPORT LBRACE • index_string_exp RBRACE HYPHEN GT STRING filter_exp SEM
   40 index_string_exp: • STRING
   41                 | • LINE_BREAK
   42                 | • index_string_exp STRING
   43                 | • index_string_exp EMPTY
   44                 | • index_string_exp LINE_BREAK

    STRING      shift, and go to state 8
    LINE_BREAK  shift, and go to state 9

    index_string_exp  go to state 33


State 20

   37 comment_table_exp: COMMENT_START index_string_exp • COMMENT_END
   42 index_string_exp: index_string_exp • STRING
   43                 | index_string_exp • EMPTY
   44                 | index_string_exp • LINE_BREAK

    STRING       shift, and go to state 25
    EMPTY        shift, and go to state 26
    LINE_BREAK   shift, and go to state 27
    COMMENT_END  shift, and go to state 34


State 21

    4 trans_exp: trans_name_exp LBRACE trans_body_exp RBRACE •

    $default  reduce using rule 4 (trans_exp)


State 22

   11 trans_body_exp: trans_body_exp import_rule_chain_exp •

    $default  reduce using rule 11 (trans_body_exp)


State 23

   10 trans_body_exp: trans_body_exp comment_table_exp •

    $default  reduce using rule 10 (trans_body_exp)


State 24

    9 trans_body_exp: trans_body_exp rule_table_exp •

    $default  reduce using rule 9 (trans_body_exp)


State 25

   42 index_string_exp: index_string_exp STRING •

    $default  reduce using rule 42 (index_string_exp)


State 26

   43 index_string_exp: index_string_exp EMPTY •

    $default  reduce using rule 43 (index_string_exp)


State 27

   44 index_string_exp: index_string_exp LINE_BREAK •

    $default  reduce using rule 44 (index_string_exp)


State 28

   38 rule_table_exp: index_string_exp EQ • GT index_string_exp SEM
   39               | index_string_exp EQ • NUMBER GT index_string_exp SEM

    NUMBER  shift, and go to state 35
    GT      shift, and go to state 36


State 29

   18 filter_exp: INCLUDE • range_exp
   22 range_exp: • NUMBER
   23          | • const_comment_exp
   24          | • REGX_START index_string_exp REGX_END
   25          | • NUMBER TO NUMBER
   26          | • const_comment_exp TO const_comment_exp
   27          | • NUMBER TO const_comment_exp
   28          | • const_comment_exp TO NUMBER
   29          | • range_exp COMMA REGX_START index_string_exp REGX_END
   30          | • range_exp COMMA const_comment_exp
   31          | • range_exp COMMA NUMBER
   32          | • range_exp COMMA NUMBER TO NUMBER
   33          | • range_exp COMMA NUMBER TO const_comment_exp
   34          | • range_exp COMMA const_comment_exp TO NUMBER
   35          | • range_exp COMMA const_comment_exp TO const_comment_exp
   36 const_comment_exp: • TRANS_IMPORT_COMMENT_START index_string_exp TRANS_IMPORT_COMMENT_END

    NUMBER                      shift, and go to state 37
    REGX_START                  shift, and go to state 38
    TRANS_IMPORT_COMMENT_START  shift, and go to state 39

    range_exp          go to state 40
    const_comment_exp  go to state 41


State 30

   19 filter_exp: EXCLUDE • range_exp
   22 range_exp: • NUMBER
   23          | • const_comment_exp
   24          | • REGX_START index_string_exp REGX_END
   25          | • NUMBER TO NUMBER
   26          | • const_comment_exp TO const_comment_exp
   27          | • NUMBER TO const_comment_exp
   28          | • const_comment_exp TO NUMBER
   29          | • range_exp COMMA REGX_START index_string_exp REGX_END
   30          | • range_exp COMMA const_comment_exp
   31          | • range_exp COMMA NUMBER
   32          | • range_exp COMMA NUMBER TO NUMBER
   33          | • range_exp COMMA NUMBER TO const_comment_exp
   34          | • range_exp COMMA const_comment_exp TO NUMBER
   35          | • range_exp COMMA const_comment_exp TO const_comment_exp
   36 const_comment_exp: • TRANS_IMPORT_COMMENT_START index_string_exp TRANS_IMPORT_COMMENT_END

    NUMBER                      shift, and go to state 37
    REGX_START                  shift, and go to state 38
    TRANS_IMPORT_COMMENT_START  shift, and go to state 39

    range_exp          go to state 42
    const_comment_exp  go to state 41


State 31

   12 import_rule_chain_exp: IMPORT STRING SEM •

    $default  reduce using rule 12 (import_rule_chain_exp)


State 32

   13 import_rule_chain_exp: IMPORT STRING filter_exp • SEM
   20 filter_exp: filter_exp • INCLUDE range_exp
   21           | filter_exp • EXCLUDE range_exp

    INCLUDE  shift, and go to state 43
    EXCLUDE  shift, and go to state 44
    SEM      shift, and go to state 45


State 33

   14 import_rule_chain_exp: IMPORT LBRACE index_string_exp • RBRACE SEM
   15                      | IMPORT LBRACE index_string_exp • RBRACE filter_exp SEM
   16                      | IMPORT LBRACE index_string_exp • RBRACE HYPHEN GT STRING SEM
   17                      | IMPORT LBRACE index_string_exp • RBRACE HYPHEN GT STRING filter_exp SEM
   42 index_string_exp: index_string_exp • STRING
   43                 | index_string_exp • EMPTY
   44                 | index_string_exp • LINE_BREAK

    STRING      shift, and go to state 25
    EMPTY       shift, and go to state 26
    LINE_BREAK  shift, and go to state 27
    RBRACE      shift, and go to state 46


State 34

   37 comment_table_exp: COMMENT_START index_string_exp COMMENT_END •

    $default  reduce using rule 37 (comment_table_exp)


State 35

   39 rule_table_exp: index_string_exp EQ NUMBER • GT index_string_exp SEM

    GT  shift, and go to state 47


State 36

   38 rule_table_exp: index_string_exp EQ GT • index_string_exp SEM
   40 index_string_exp: • STRING
   41                 | • LINE_BREAK
   42                 | • index_string_exp STRING
   43                 | • index_string_exp EMPTY
   44                 | • index_string_exp LINE_BREAK

    STRING      shift, and go to state 8
    LINE_BREAK  shift, and go to state 9

    index_string_exp  go to state 48


State 37

   22 range_exp: NUMBER •  [INCLUDE, EXCLUDE, COMMA, SEM]
   25          | NUMBER • TO NUMBER
   27          | NUMBER • TO const_comment_exp

    TO  shift, and go to state 49

    $default  reduce using rule 22 (range_exp)


State 38

   24 range_exp: REGX_START • index_string_exp REGX_END
   40 index_string_exp: • STRING
   41                 | • LINE_BREAK
   42                 | • index_string_exp STRING
   43                 | • index_string_exp EMPTY
   44                 | • index_string_exp LINE_BREAK

    STRING      shift, and go to state 8
    LINE_BREAK  shift, and go to state 9

    index_string_exp  go to state 50


State 39

   36 const_comment_exp: TRANS_IMPORT_COMMENT_START • index_string_exp TRANS_IMPORT_COMMENT_END
   40 index_string_exp: • STRING
   41                 | • LINE_BREAK
   42                 | • index_string_exp STRING
   43                 | • index_string_exp EMPTY
   44                 | • index_string_exp LINE_BREAK

    STRING      shift, and go to state 8
    LINE_BREAK  shift, and go to state 9

    index_string_exp  go to state 51


State 40

   18 filter_exp: INCLUDE range_exp •  [INCLUDE, EXCLUDE, SEM]
   29 range_exp: range_exp • COMMA REGX_START index_string_exp REGX_END
   30          | range_exp • COMMA const_comment_exp
   31          | range_exp • COMMA NUMBER
   32          | range_exp • COMMA NUMBER TO NUMBER
   33          | range_exp • COMMA NUMBER TO const_comment_exp
   34          | range_exp • COMMA const_comment_exp TO NUMBER
   35          | range_exp • COMMA const_comment_exp TO const_comment_exp

    COMMA  shift, and go to state 52

    $default  reduce using rule 18 (filter_exp)


State 41

   23 range_exp: const_comment_exp •  [INCLUDE, EXCLUDE, COMMA, SEM]
   26          | const_comment_exp • TO const_comment_exp
   28          | const_comment_exp • TO NUMBER

    TO  shift, and go to state 53

    $default  reduce using rule 23 (range_exp)


State 42

   19 filter_exp: EXCLUDE range_exp •  [INCLUDE, EXCLUDE, SEM]
   29 range_exp: range_exp • COMMA REGX_START index_string_exp REGX_END
   30          | range_exp • COMMA const_comment_exp
   31          | range_exp • COMMA NUMBER
   32          | range_exp • COMMA NUMBER TO NUMBER
   33          | range_exp • COMMA NUMBER TO const_comment_exp
   34          | range_exp • COMMA const_comment_exp TO NUMBER
   35          | range_exp • COMMA const_comment_exp TO const_comment_exp

    COMMA  shift, and go to state 52

    $default  reduce using rule 19 (filter_exp)


State 43

   20 filter_exp: filter_exp INCLUDE • range_exp
   22 range_exp: • NUMBER
   23          | • const_comment_exp
   24          | • REGX_START index_string_exp REGX_END
   25          | • NUMBER TO NUMBER
   26          | • const_comment_exp TO const_comment_exp
   27          | • NUMBER TO const_comment_exp
   28          | • const_comment_exp TO NUMBER
   29          | • range_exp COMMA REGX_START index_string_exp REGX_END
   30          | • range_exp COMMA const_comment_exp
   31          | • range_exp COMMA NUMBER
   32          | • range_exp COMMA NUMBER TO NUMBER
   33          | • range_exp COMMA NUMBER TO const_comment_exp
   34          | • range_exp COMMA const_comment_exp TO NUMBER
   35          | • range_exp COMMA const_comment_exp TO const_comment_exp
   36 const_comment_exp: • TRANS_IMPORT_COMMENT_START index_string_exp TRANS_IMPORT_COMMENT_END

    NUMBER                      shift, and go to state 37
    REGX_START                  shift, and go to state 38
    TRANS_IMPORT_COMMENT_START  shift, and go to state 39

    range_exp          go to state 54
    const_comment_exp  go to state 41


State 44

   21 filter_exp: filter_exp EXCLUDE • range_exp
   22 range_exp: • NUMBER
   23          | • const_comment_exp
   24          | • REGX_START index_string_exp REGX_END
   25          | • NUMBER TO NUMBER
   26          | • const_comment_exp TO const_comment_exp
   27          | • NUMBER TO const_comment_exp
   28          | • const_comment_exp TO NUMBER
   29          | • range_exp COMMA REGX_START index_string_exp REGX_END
   30          | • range_exp COMMA const_comment_exp
   31          | • range_exp COMMA NUMBER
   32          | • range_exp COMMA NUMBER TO NUMBER
   33          | • range_exp COMMA NUMBER TO const_comment_exp
   34          | • range_exp COMMA const_comment_exp TO NUMBER
   35          | • range_exp COMMA const_comment_exp TO const_comment_exp
   36 const_comment_exp: • TRANS_IMPORT_COMMENT_START index_string_exp TRANS_IMPORT_COMMENT_END

    NUMBER                      shift, and go to state 37
    REGX_START                  shift, and go to state 38
    TRANS_IMPORT_COMMENT_START  shift, and go to state 39

    range_exp          go to state 55
    const_comment_exp  go to state 41


State 45

   13 import_rule_chain_exp: IMPORT STRING filter_exp SEM •

    $default  reduce using rule 13 (import_rule_chain_exp)


State 46

   14 import_rule_chain_exp: IMPORT LBRACE index_string_exp RBRACE • SEM
   15                      | IMPORT LBRACE index_string_exp RBRACE • filter_exp SEM
   16                      | IMPORT LBRACE index_string_exp RBRACE • HYPHEN GT STRING SEM
   17                      | IMPORT LBRACE index_string_exp RBRACE • HYPHEN GT STRING filter_exp SEM
   18 filter_exp: • INCLUDE range_exp
   19           | • EXCLUDE range_exp
   20           | • filter_exp INCLUDE range_exp
   21           | • filter_exp EXCLUDE range_exp

    INCLUDE  shift, and go to state 29
    EXCLUDE  shift, and go to state 30
    SEM      shift, and go to state 56
    HYPHEN   shift, and go to state 57

    filter_exp  go to state 58


State 47

   39 rule_table_exp: index_string_exp EQ NUMBER GT • index_string_exp SEM
   40 index_string_exp: • STRING
   41                 | • LINE_BREAK
   42                 | • index_string_exp STRING
   43                 | • index_string_exp EMPTY
   44                 | • index_string_exp LINE_BREAK

    STRING      shift, and go to state 8
    LINE_BREAK  shift, and go to state 9

    index_string_exp  go to state 59


State 48

   38 rule_table_exp: index_string_exp EQ GT index_string_exp • SEM
   42 index_string_exp: index_string_exp • STRING
   43                 | index_string_exp • EMPTY
   44                 | index_string_exp • LINE_BREAK

    STRING      shift, and go to state 25
    EMPTY       shift, and go to state 26
    LINE_BREAK  shift, and go to state 27
    SEM         shift, and go to state 60


State 49

   25 range_exp: NUMBER TO • NUMBER
   27          | NUMBER TO • const_comment_exp
   36 const_comment_exp: • TRANS_IMPORT_COMMENT_START index_string_exp TRANS_IMPORT_COMMENT_END

    NUMBER                      shift, and go to state 61
    TRANS_IMPORT_COMMENT_START  shift, and go to state 39

    const_comment_exp  go to state 62


State 50

   24 range_exp: REGX_START index_string_exp • REGX_END
   42 index_string_exp: index_string_exp • STRING
   43                 | index_string_exp • EMPTY
   44                 | index_string_exp • LINE_BREAK

    STRING      shift, and go to state 25
    EMPTY       shift, and go to state 26
    LINE_BREAK  shift, and go to state 27
    REGX_END    shift, and go to state 63


State 51

   36 const_comment_exp: TRANS_IMPORT_COMMENT_START index_string_exp • TRANS_IMPORT_COMMENT_END
   42 index_string_exp: index_string_exp • STRING
   43                 | index_string_exp • EMPTY
   44                 | index_string_exp • LINE_BREAK

    STRING                    shift, and go to state 25
    EMPTY                     shift, and go to state 26
    LINE_BREAK                shift, and go to state 27
    TRANS_IMPORT_COMMENT_END  shift, and go to state 64


State 52

   29 range_exp: range_exp COMMA • REGX_START index_string_exp REGX_END
   30          | range_exp COMMA • const_comment_exp
   31          | range_exp COMMA • NUMBER
   32          | range_exp COMMA • NUMBER TO NUMBER
   33          | range_exp COMMA • NUMBER TO const_comment_exp
   34          | range_exp COMMA • const_comment_exp TO NUMBER
   35          | range_exp COMMA • const_comment_exp TO const_comment_exp
   36 const_comment_exp: • TRANS_IMPORT_COMMENT_START index_string_exp TRANS_IMPORT_COMMENT_END

    NUMBER                      shift, and go to state 65
    REGX_START                  shift, and go to state 66
    TRANS_IMPORT_COMMENT_START  shift, and go to state 39

    const_comment_exp  go to state 67


State 53

   26 range_exp: const_comment_exp TO • const_comment_exp
   28          | const_comment_exp TO • NUMBER
   36 const_comment_exp: • TRANS_IMPORT_COMMENT_START index_string_exp TRANS_IMPORT_COMMENT_END

    NUMBER                      shift, and go to state 68
    TRANS_IMPORT_COMMENT_START  shift, and go to state 39

    const_comment_exp  go to state 69


State 54

   20 filter_exp: filter_exp INCLUDE range_exp •  [INCLUDE, EXCLUDE, SEM]
   29 range_exp: range_exp • COMMA REGX_START index_string_exp REGX_END
   30          | range_exp • COMMA const_comment_exp
   31          | range_exp • COMMA NUMBER
   32          | range_exp • COMMA NUMBER TO NUMBER
   33          | range_exp • COMMA NUMBER TO const_comment_exp
   34          | range_exp • COMMA const_comment_exp TO NUMBER
   35          | range_exp • COMMA const_comment_exp TO const_comment_exp

    COMMA  shift, and go to state 52

    $default  reduce using rule 20 (filter_exp)


State 55

   21 filter_exp: filter_exp EXCLUDE range_exp •  [INCLUDE, EXCLUDE, SEM]
   29 range_exp: range_exp • COMMA REGX_START index_string_exp REGX_END
   30          | range_exp • COMMA const_comment_exp
   31          | range_exp • COMMA NUMBER
   32          | range_exp • COMMA NUMBER TO NUMBER
   33          | range_exp • COMMA NUMBER TO const_comment_exp
   34          | range_exp • COMMA const_comment_exp TO NUMBER
   35          | range_exp • COMMA const_comment_exp TO const_comment_exp

    COMMA  shift, and go to state 52

    $default  reduce using rule 21 (filter_exp)


State 56

   14 import_rule_chain_exp: IMPORT LBRACE index_string_exp RBRACE SEM •

    $default  reduce using rule 14 (import_rule_chain_exp)


State 57

   16 import_rule_chain_exp: IMPORT LBRACE index_string_exp RBRACE HYPHEN • GT STRING SEM
   17                      | IMPORT LBRACE index_string_exp RBRACE HYPHEN • GT STRING filter_exp SEM

    GT  shift, and go to state 70

